# OpenAI_Assistant_M2_Gen

./: .gitignore  README.md  SystemStateDiagram.drawio  Untitled Diagram.drawio  call_llm.py  common.py  conversion.py  convert_ecore.py  exportEcore.py  exportXMI.py  generateDsls.py  main.py  openai_access.py  output.txt  prepare_prompt.py  prompt.txt  pyproject.toml  requirements.txt  test.py
antlrConversion/: ClassDiagram.g4  ClassDiagram.interp  ClassDiagram.tokens  ClassDiagramLexer.interp  ClassDiagramLexer.py  ClassDiagramLexer.tokens  ClassDiagramListener.py  ClassDiagramParser.py  conversion.py  input.ebnf  output.ecore  output.txt  output.xmi  solution.ecore  solution.txt
api_calls/: call_llm.py  llama_call.py
data/: M2_ebnf_format.txt  M2_format.ebnf  Modelling.xlsx  input_output_GPT.csv  readme.md
data/DSL2Gen/H2S/: description.txt  generated.csv
data/Data analysis/: Significance_Test_of_Evaluations.ipynb  data_v4.csv  final_data_analysis.ipynb
data/Example/: 1shot_labtracker.txt  3shot.txt
data/Problem Descriptions/: 06_SHAS_solution.ump
data/Round 1 Evaluation/: ManuallyEvaluation-ChatGPT.xlsx  ManuallyEvaluation-GPT3.xlsx  first_round.csv
data/Round 2 Evaluation/: GPT4.xlsx  chatgpt.xlsx  check.xlsx  gpt3.xlsx
data/experiments_result/: Union-2shot-5runs-LabTracker.xlsx  Union-2shot-5runs-Tile-O.xlsx
evaluation/: README.md  grades_sheet.xlsx
evaluation/grades_analysis/: .RData  .Rhistory  IFT6253LLMAssistantEvaluation.xlsx  analysis.Rmd
llm_calls/: gemini_call.py  gpt_call.py
uniqueDslTest/: generateDsl.py  output.txt  prompt.txt
(+103 files in other folders)
